--- a/client/scss/components/_profile_form.scss
+++ b/client/scss/components/_profile_form.scss
@@ -3,8 +3,6 @@ form.profile-edit-form {
     overflow: auto;
 
     div.checkbox {
-      margin-bottom: $spacing-unit;
-
       @include breakpoint($narrow) {
         @include gallery(1 of 2);
       }
